--- a/014.html
+++ b/014.html
@@ -75,9 +75,9 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A4200002025072202317</div></li>
+                    <div class="detail-value " id="reqNo">A4300002025072202317</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">湖北省，河南省，河北省</div></li>
+				<div class="detail-value " id="passDists">湖南省，湖北省，河南省，河北省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
                     <div class="detail-value " id="passDate">2025年07月24日11时37分至 2025年07月31日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
@@ -85,7 +85,8 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
 
-<span id="pro">湖北省</span>: 襄阳市威安水泥制品有限公司--G316--襄阳西收费站--G55二广高速--鄂豫界；<br><hr>
+<span id="pro">湖南省</span>: 中国石油天下雄鹰武校北加油站--G354--黄丝桥收费站--G56杭瑞高速--G55二广高速--湘鄂界；<br><hr>
+<span id="pro">湖北省</span>: 鄂湘界--G55二广高速--鄂豫界；<br><hr>
 <span id="pro">河南省</span>: 豫鄂界--G55二广高速--S83兰南高速--G0421许广高速--G4京港澳高速--豫冀界；<br><hr>
 <span id="pro">河北省</span>: 冀豫界--G4京港澳高速--保定南收费站--S330--保定市交通能源加油站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
@@ -136,6 +137,7 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
+湖南省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
 湖北省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
 河南省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
 河北省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
