--- a/021.html
+++ b/021.html
@@ -85,7 +85,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
 <span id="pro">重庆市</span>:五桥收费站-G69银百高速-长岭互通-G5012恩广高速-渝鄂界；<br><hr>
-<span id="pro">湖北省</span>:鄂渝界-G5012恩广高速-G50沪渝高速-G6911安来高速-恩施北收费站<br><hr></div></li>
+<span id="pro">湖北省</span>:鄂渝界-G5012恩广高速-G50沪渝高速-G6911安来高速-宣恩收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台程玖汽车贸易有限公司</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
