--- a/005.html
+++ b/005.html
@@ -84,7 +84,7 @@
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广西壮族自治区</span>:广西桂友电气科技有限公司--G324--坛洛收费站--G80广昆高速--G69银百高速--G80广昆高速--桂滇界；<br><hr>
+<span id="pro">广西壮族自治区</span>:中信大锰崇左产业园--进城大道--崇左北收费站--S60合那高速--桂滇界；<br><hr>
 <span id="pro">云南省</span>:滇桂界--G80广昆高速--锁龙寺收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">范琪宇</div></li>
